--- a/manifest.json
+++ b/manifest.json
@@ -1,20 +1,34 @@
 {
-  "name": "KNOWER LIFE",
-  "short_name": "KNOWER",
-  "start_url": "/",
-  "display": "standalone",
-  "background_color": "#ffffff",
-  "theme_color": "#000000",
-  "icons": [
-    {
-      "src": "/icon-192.png",
-      "sizes": "192x192",
-      "type": "image/png"
-    },
-    {
-      "src": "/icon-512.png",
-      "sizes": "512x512",
-      "type": "image/png"
-    }
-  ]
+    "name": "KNOWER LIFE",
+    "short_name": "KNOWER",
+    "start_url": "/",
+    "display": "standalone",
+    "background_color": "#ffffff",
+    "theme_color": "#007bff",
+    "description": "KNOWER LIFE - ваш интеллектуальный партнер с передовыми возможностями ИИ.",
+    "lang": "ru-RU",
+    "dir": "ltr",
+    "orientation": "portrait",
+    "scope": "/",
+    "prefer_related_applications": false,
+    "icons": [
+        {
+            "src": "/icon-192.png",
+            "sizes": "192x192",
+            "type": "image/png",
+            "purpose": "any maskable"
+        },
+        {
+            "src": "/icon-512.png",
+            "sizes": "512x512",
+            "type": "image/png",
+            "purpose": "any maskable"
+        },
+        {
+            "src": "/icon-144.png",
+            "sizes": "144x144",
+            "type": "image/png",
+            "purpose": "any"
+        }
+    ]
 }
